2009-01-19  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* sb-opentechpress-jp.el (shimbun-opentechpress-jp): Switch the order
	of parent classes.

2009-01-19  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* sb-itmedia.el (shimbun-itmedia): Switch the order of parent classes.

2009-01-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* sb-opentechpress-jp.el (shimbun-opentechpress-jp-content-start)
	(shimbun-opentechpress-jp-content-end)
	(shimbun-multi-next-url)
	(shimbun-multi-clear-contents)
	(shimbun-clear-contents): Follow the site design change.
	(shimbun-opentechpress-jp-ignored-subject): New variable.

2009-01-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkei.el (shimbun-nikkei-group-table): Update url for it.pc.
	(shimbun-nikkei-get-headers-it-pc): Rewrite.

2008-12-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-headers-1): New function to support refresh.
	(shimbun-headers): Use it.

	* sb-slashdot.el (shimbun-slashdot-get-headers): Don't use
	member-ignore-case that's unavailable in XEmacs 21.4.

2008-12-23  David Engster  <dengste@eml.cc>

	* sb-sueddeutsche-de.el (shimbun-sueddeutsche-de-group-url): Removed
	kino group since feed is broken.
	(shimbun-get-headers, shimbun-rss-build-message-id): Adapt to new URL
	scheme.

	* sb-slashdot.el (sb-multi): Removed.
	(shimbun-slashdot-group-url): Changed frontpage URL.
	(shimbun-slashdot-regexp-section-id-subject): Adapt regexp.
	(shimbun-slashdot-regexp-author-time): Changed for better date parsing.
	(shimbun-slashdot-regexp-comment-system): Removed.
	(shimbun-slashdot-get-headers): Adapt to new site design.  Improved
	date parsing.  Immediately retrieve old comment system.  Removed
	catch/throw since new articles need not be at the top.
	(shimbun-multi-next-url): Removed.
	(shimbun-clear-contents): Changed due to removal of sb-multi.  Set
	quotes in italics.

2008-12-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-aljazeera.el (shimbun-aljazeera-content-end): Add comment.