@@ -1,3 +1,14 @@
+2009-01-21  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
+
+	* sb-rss.el (shimbun-rss-initialize-ignored-subject): New function.
+	(initialize-instance): Use it.
+
+	* sb-itmedia.el (shimbun-itmedia): Reverted.
+	(initialize-instance): New overriden method.
+
+	* sb-opentechpress-jp.el (shimbun-opentechpress-jp): Reverted.
+	(initialize-instance): New overriden method.
+
 2009-01-19  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* sb-opentechpress-jp.el (shimbun-opentechpress-jp): Switch the order
